Removing deprecated URL(java.lang.String)