@@ -15,7 +15,7 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.util.concurrent.TimeUnit;
 
 public class RequestUtil {
@@ -29,13 +29,13 @@ public class RequestUtil {
 
   public static boolean doGet(String url) {
     try {
-      HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
+      HttpURLConnection connection = (HttpURLConnection) URI.create(url).toURL().openConnection();
       connection.setConnectTimeout(5000);
       connection.setReadTimeout(500);
       connection.setRequestMethod("GET");
       int responseCode = connection.getResponseCode();
       return (200 <= responseCode && responseCode <= 399);
-    } catch (IOException exception) {
+    } catch (Exception exception) {
       return false;
     }
   }
